--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/material": "^5.16.7",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.14",
+    "i18next": "^23.15.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.0.1",
     "react-router-dom": "^6.26.1",
     "swiper": "^11.1.12"
   },
