--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,17 +1,39 @@
 version: 0.2
 
+env:
+  variables:
+    IMAGE_REPO_NAME: "megapix_landing_img"
+  shell: bash
+
 phases:
-  install:
-    runtime-versions:
-      nodejs: 20
   pre_build:
     commands:
-      - npm install
+      # Obtener el SHA corto del commit y timestamp
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - TIMESTAMP=$(date +%Y%m%d%H%M%S)
+      - echo Logging in to Amazon ECR...
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
+
   build:
     commands:
-      - npm run build
+      - echo Build started on `date`
+      - echo Building the Docker image...
+      # Construimos la imagen base
+      - docker build -t $REPOSITORY_URI:$COMMIT_HASH .
+      # Creamos múltiples tags de la misma imagen
+      - docker tag $REPOSITORY_URI:$COMMIT_HASH $REPOSITORY_URI:$TIMESTAMP
+      - docker tag $REPOSITORY_URI:$COMMIT_HASH $REPOSITORY_URI:latest
+
+  post_build:
+    commands:
+      - echo Build completed on `date`
+      # Subimos todas las versiones tageadas
+      - docker push $REPOSITORY_URI:$COMMIT_HASH
+      - docker push $REPOSITORY_URI:$TIMESTAMP
+      - docker push $REPOSITORY_URI:latest
+      - printf '[{"name":"mi-contenedor","imageUri":"%s"}]' $REPOSITORY_URI:$COMMIT_HASH > imagedefinitions.json
+
 artifacts:
   files:
-    - '**/*'
-  base-directory: 'dist'
-
+    - imagedefinitions.json
