--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    IMAGE_REPO_NAME: "megapix_landing_img"
+    IMAGE_REPO_NAME: megapix_landing_img
   shell: bash
 
 phases:
@@ -12,7 +12,9 @@ phases:
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - TIMESTAMP=$(date +%Y%m%d%H%M%S)
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login
+        --username AWS --password-stdin
+        $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
 
   build:
@@ -32,7 +34,8 @@ phases:
       - docker push $REPOSITORY_URI:$COMMIT_HASH
       - docker push $REPOSITORY_URI:$TIMESTAMP
       - docker push $REPOSITORY_URI:latest
-      - printf '[{"name":"mi-contenedor","imageUri":"%s"}]' $REPOSITORY_URI:$COMMIT_HASH > imagedefinitions.json
+      - printf '[{"name":"mi-contenedor","imageUri":"%s"}]'
+        $REPOSITORY_URI:$COMMIT_HASH > imagedefinitions.json
 
 artifacts:
   files:
