--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.16.7",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.14",
+    "aws-sdk": "^2.1692.0",
     "i18next": "^23.15.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
